修复(Strengthen): 修复关闭强化 GUI 时材料返还 NPE
- 修正材料槽快照复制逻辑，允许空槽 null 保留，避免直接关闭 GUI 时中断返还流程。