@@ -1,6 +1,7 @@
 package emaki.jiuwu.craft.strengthen.service;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import org.bukkit.entity.Player;
@@ -75,7 +76,7 @@ final class StrengthenGuiSession {
         for (ItemStack itemStack : materialInputs) {
             copy.add(cloneNonAir(itemStack));
         }
-        return List.copyOf(copy);
+        return Collections.unmodifiableList(copy);
     }
 
     public AttemptPreview preview() {
